# switch-lan-play

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  README_zh.md
.github/workflows/: build.yml  openwrt.yml  release.yml
base/: CMakeLists.txt  debug.c  debug.h  llog.c  llog.h
base/include/base/: byteorder.h  llog.h  packed.h  print_macros.h  slp_addr.h
cmake/: FindLibuv.cmake  FindPCAP.cmake  FindUVW.cmake  toolchain-mingw32.cmake  toolchain-mingw64.cmake
deno-server/: README.md  tsconfig.json  users.json
deno-server/src/: main.ts  monitor.ts  udpserver.ts  version.ts
deno-server/src/auth/: CustomAuthProvider.ts  httpAuthProvider.ts  index.ts  jsonAuthProvider.ts  types.ts
docker/: Dockerfile.all  Dockerfile.android  Dockerfile.linux  Dockerfile.openwrt  Dockerfile.win  Dockerfile.win32  Dockerfile.win64  Makefile.openwrt
lwip/: .editorconfig  CHANGELOG  CMakeLists.txt
lwip/custom/: lwipopts.h
lwip/custom/arch/: cc.h
lwip/doc/: mqtt_client.txt  sys_arch.txt
lwip/doc/doxygen/: lwip.Doxyfile  main_page.h
lwip/src/api/: api_lib.c  api_msg.c  err.c  netdb.c  sockets.c
lwip/src/apps/httpd/: httpd.c
lwip/src/apps/lwiperf/: lwiperf.c
lwip/src/apps/mdns/: mdns.c
lwip/src/apps/mqtt/: mqtt.c
lwip/src/apps/snmp/: snmp_mib2_ip.c  snmp_msg.c  snmp_netconn.c  snmp_threadsync.c
lwip/src/apps/sntp/: sntp.c
lwip/src/core/: def.c  dns.c  inet_chksum.c  init.c  mem.c  memp.c  netif.c  pbuf.c  raw.c  stats.c  tcp.c  tcp_in.c  tcp_out.c  timeouts.c  udp.c
lwip/src/core/ipv4/: autoip.c  dhcp.c  etharp.c  icmp.c  igmp.c  ip4.c  ip4_addr.c  ip4_frag.c
lwip/src/core/ipv6/: ethip6.c  icmp6.c  ip6.c  ip6_addr.c  ip6_frag.c  mld6.c  nd6.c
lwip/src/include/lwip/: api.h  arch.h  debug.h  def.h  dhcp.h  errno.h  icmp6.h  inet.h  init.h  ip4_addr.h  ip6_addr.h  ip_addr.h  netif.h  netifapi.h  opt.h  sockets.h  stats.h  sys.h  tcp.h
lwip/src/include/lwip/apps/: mdns.h  mqtt.h  mqtt_opts.h
lwip/src/include/lwip/priv/: api_msg.h  nd6_priv.h  tcp_priv.h
lwip/src/include/lwip/prot/: ip4.h  ip6.h  mld6.h  nd6.h  tcp.h
lwip/src/include/netif/ppp/: ppp_impl.h
lwip/src/netif/: ethernet.c  lowpan6.c
lwip/src/netif/ppp/: eap.c  ppp.c  pppoe.c  pppol2tp.c  pppos.c
lwip/test/unit/: lwip_unittests.c  lwipopts.h
lwip/test/unit/dhcp/: test_dhcp.c
lwip/test/unit/ip4/: test_ip4.c
lwip/test/unit/mdns/: test_mdns.c
lwip/test/unit/tcp/: tcp_helper.c  test_tcp.c
server/: .gitignore  Dockerfile  package.json  tsconfig.json  users_schema.json
server/src/: main.ts  monitor.ts  protocol.ts  server.ts  udpserver.ts
server/src/auth/: CustomAuthProvider.ts  httpAuthProvider.ts  index.ts  jsonAuthProvider.ts  types.ts
src/: CMakeLists.txt  arp.c  arp.h  config.h  forwarder.c  gateway.c  gateway.cpp  gateway.h  helper.c  helper.h  ipv4.c  lan-client.c  lan-play.c  lan-play.h  main.c  main.cpp  packet.c  packet.h  pcap.h  pcaploop.c  pcaploop.cpp  pcaploop.h  proxy.c  proxy.h  proxy.hpp  proxy_common.hpp  proxy_direct.cpp  proxy_socks5.cpp  rpc.c  rpc.cpp  rpc.h  sha1.c  util.hpp  uv_lwip.c  uv_lwip.h  uv_lwip.hpp
src/ipv4/: icmp.c  ipv4.c  ipv4.h  udp.c
src/rpc/: base64.hpp  buffer-list.hpp  lan-play.cpp  lan-play.hpp  read-line.hpp  rpc-server.cpp  rpc-server.hpp  rpc-tcp-server.hpp  rpc-ws-server.cpp  rpc-ws-server.hpp  rpc.cpp  sha1.c  sha1.h
test/: uv_lwip_test.c
uv_lwip/: CMakeLists.txt  util.hpp  uv_lwip.c  uv_lwip.h  uv_lwip.hpp
